adjust some open api specs and testet everything
