# api/src/routes/filter.ts
@@ -8,6 +8,6 @@ const router = express.Router();
  * we descided to do it that way. This part isn't REST conform.
  * Todo: rework filter process and use query params
  */
-router.post('/scholarship', filterScholarships);
+router.post('/scholarships', filterScholarships);
 
 export = router;
